syntax = "proto3";

package charger;

service Router {
	rpc ExecCommand (CommandRequest) returns (stream CommandResponse);
}

message CommandRequest {
	repeated string args = 1;
}

message CommandResponse {
	bytes buffer = 1;
	enum StreamType {
		STDOUT = 0;
		STDERR = 1;
	}
	StreamType streamType = 2;
	int32 exitCode = 3;
}
